CMAKE_MINIMUM_REQUIRED( VERSION 3.23 )
PROJECT( "Toy-Cxx-LAPACK" )

IF( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /std:c++20" )
ELSEIF( CMAKE_CXX_COMPILER_ID MATCHES "GNU" )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20" )
ELSEIF( CMAKE_CXX_COMPILER_ID MATCHES "Intel" )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20" )
ELSEIF( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20" )
ENDIF()

FILE( GLOB PROJECT_FILES "*.h" "*.hpp" "*.cpp" )

ADD_EXECUTABLE( ${PROJECT_NAME} ${PROJECT_FILES} )